--- a/pagina_de_estilo.css
+++ b/pagina_de_estilo.css
@@ -9,7 +9,7 @@
     width: 100vw;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    background-size:contain;
+    background-size:cover;
    
     
 }
