--- a/pagina_de_estilo.css
+++ b/pagina_de_estilo.css
@@ -7,9 +7,12 @@
     background-image: url(img/matematica.png);
     height: 100vh;
     width: 100vw;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    color: rgb(216, 21, 241);
     background-size:cover;
+    text-align: center;
+    font-size: 25px;
+    
    
     
 }
