--- a/pagina_de_estilo.css
+++ b/pagina_de_estilo.css
@@ -24,4 +24,11 @@
     transform: translate(-50%,-50%);
     border-radius: 15%;
     padding: 15px;
+    
+}
+.botao{
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+    cursor: pointer;
 }
