--- a/pagina_de_estilo.css
+++ b/pagina_de_estilo.css
@@ -8,7 +8,7 @@
     height: 100vh;
     width: 100vw;
     font-family:Georgia, 'Times New Roman', Times, serif;
-    color: rgb(216, 21, 241);
+    color: rgb(8, 8, 8);
     background-size:cover;
     text-align: center;
     font-size: 25px;
@@ -18,12 +18,14 @@
 }
 .calculadora{
     position: absolute;
-    background-color:rgb(235, 39, 4);
+    background-color:rgb(0, 190, 41);
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     border-radius: 15%;
     padding: 15px;
+    border: solid 3px;
+    text-align: center;
     
 }
 .botao{
@@ -36,6 +38,16 @@
     color: aliceblue ;
 }
 .botao:hover{
-    background-color: rgb(6, 136, 13);
+    background-color: rgb(252, 134, 0);
+    color: rgb(0, 0, 0);
+}
+#resultado{
+    font-size: 30px;
+    width: 200px;
+    height: 25px;
+    background-color: aliceblue;
     color: black;
+    text-align: right;
+    padding: 5px;
+    
 }
